# tensorj

./: .gitmodules  CMakeLists.txt  Design.md  Design_OrderOfOperations.md  README.md  debug_expression.cpp  debug_fork_lexer.cpp  debug_fork_tokens.cpp  debug_lexer_space.cpp  debug_lexer_test.cpp  debug_tensor.cpp  debug_test_tokens.cpp  debug_tokenization.cpp  debug_tokenize.cpp  debug_tokens.cpp  debug_vector.cpp  debug_vector_simple.cpp  test_graphdef_execution.cpp  worklog.md
Src/: CmakeLists.txt
Src/ast/: ast_nodes.hpp
Src/lexer/: lexer.cpp  lexer.hpp  token.cpp
app/: CMakeLists.txt  main.cpp
cmake/: FindTensorFlow.cmake
src/: CMakeLists.txt  j_interpreter_lib.hpp
src/ast/: ast_nodes.cpp  ast_nodes.hpp
src/common/: source_location.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp  tf_graph.cpp  tf_graph.hpp  tf_operations.cpp  tf_operations.hpp  tf_operations_backup.cpp
src/lexer/: lexer.cpp  lexer.cpp.backup  lexer.hpp  token.cpp  token.hpp
src/parser/: parser.cpp  parser.hpp
src/tests/ast/: test_ast.cpp
tests/: CMakeLists.txt
tests/debug/: test_debug.cpp
tests/interpreter/: test_interpreter.cpp  test_j_basics.cpp  test_j_lists_tables.cpp  test_jtensor.cpp  test_tensor_operations.cpp  test_tf_graph.cpp
tests/lexer/: test_lexer.cpp
tests/parser/: test_parser.cpp
